--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,2 +1,8 @@
-//- include ../pug-parts/header.pug
+include ../pug-parts/header.pug
+
+.container 
+    .main 
+
+
+
 //- include ../pug-parts/footer.pug
