--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -4,9 +4,10 @@
     line-height: 1;
     box-sizing: border-box;
     outline: none;
-    font-family: "Gilroy", sans-serif;
+    font-family: "Raleway", sans-serif;
     z-index: 1;
     text-decoration: none;
+    position: relative;
 }
 html,
 body {
@@ -15,80 +16,24 @@ body {
 }
 body {
     font-size: 10px;
-    max-width: 100%;
     overflow-x: hidden;
 }
 .container {
-    max-width: 123em;
+    max-width: 133em;
     padding: 0 2em;
     margin: 0 auto;
+    height: 22em;
 
     .section-title {
-        font-size: 4.8em;
-        font-weight: bold;
-        text-align: left;
+        font-size: 15em;
     }
     .section-subtitle {
-        font-size: 2.6em;
-        font-weight: 500;
-        margin: 0.6em 0 2.8em 0;
+    }
+
+    .accent {
+        color: $red;
     }
 
     .btn {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 0.5em;
-        padding: 0.6em 1em;
-        cursor: pointer;
-        transition: 0.3s linear;
-    }
-    .btn-gray {
-        color: $dark;
-        background-color: $gray;
-
-        &:hover {
-            background-color: $border;
-        }
-    }
-    .btn-dark {
-        color: $white;
-        background-color: $dark;
-
-        &:hover {
-            background-color: $black;
-        }
-    }
-    .btn-blue {
-        background-color: $blue;
-        color: $light;
-
-        &:hover {
-            background-color: $blueHover;
-        }
-    }
-    .btn_text {
-    }
-    .btn_text--tgm {}
-    .btn_text--tgm::after {
-        display: block;
-        position: relative;
-        content: "";
-        width: 2.5em;
-        height: 1.3em;
-        top: 0;
-        right: 0;
-        background-image: url(/img/icon-tgm.svg);
-        background-size: contain;
-        background-position: center;
-        background-repeat: no-repeat;
-        margin: 0 0 0 0.8em;
-    }
-
-    .text-content {
-        & > p {
-            font-size: 2em;
-            line-height: 1.5;
-        }
     }
 }
