added about, opisanie

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,8 +1,7 @@
 include ../pug-parts/header.pug
+include ../pug-parts/promo-slider.pug
+include ../pug-parts/about.pug
+include ../pug-parts/opisanie.pug
 
-.container 
-    .main 
 
-
-
-//- include ../pug-parts/footer.pug
+include ../pug-parts/footer.pug
