--- a/src/pug-parts/header.pug
+++ b/src/pug-parts/header.pug
@@ -2,9 +2,9 @@ doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        link(rel="stylesheet", href="/css/style.min.css")
-        title Document
+        meta(name="viewport" content="width=device-width, initial-scale=1.0")
+        link(rel="stylesheet" href="/css/style.min.css")
+        title Главная страница
     body 
         header 
             .container 
