--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -22,18 +22,60 @@ body {
     max-width: 133em;
     padding: 0 2em;
     margin: 0 auto;
-    height: 22em;
 
     .section-title {
-        font-size: 15em;
+        font-size: 6.8em;
+        font-weight: 500;
     }
     .section-subtitle {
     }
-
+    .block-title {
+        font-size: 3.6em;
+        font-weight: 600;
+    }
     .accent {
         color: $red;
     }
 
     .btn {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        padding: 2em 7.2em;
+        border: 0.3em solid $red;
+        border-radius: 2.2em;
+        transition: all 0.3s linear;
+        cursor: pointer;
+
+        .text {
+            font-weight: 500;
+            text-transform: uppercase;
+            font-size: 2em;
+        }
+    }
+    .btn--red {
+        background-color: $red;
+        color: $white;
+
+        &:hover {
+            background-color: $redHover;
+            border-color: $redHover;
+        }
+    }
+
+    .content-block {
+        color: $text;
+        font-weight: 400;
+
+        p {
+            line-height: 1.35;
+            font-size: 1.8em;
+            margin: 0 0 0.6em 0;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
     }
 }
