--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,5 +1,5 @@
 header {
-    padding: 2em 0;
+    padding: 2em 0 1.1em;
 
     .container {
         .top {
@@ -75,7 +75,7 @@ header {
                     color: #272727;
                     font-weight: 400;
                     text-transform: lowercase;
-                    margin: 0.1em 0 0 0;
+                    margin: 0.2em 0 0 0;
                     letter-spacing: 0.0325em;
                 }
             }
