added who-can section

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,6 +2,7 @@ include ../pug-parts/header.pug
 include ../pug-parts/promo-slider.pug
 include ../pug-parts/about.pug
 include ../pug-parts/opisanie.pug
+include ../pug-parts/who-can.pug
 
 
 include ../pug-parts/footer.pug
