--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -68,13 +68,53 @@ body {
         color: $text;
         font-weight: 400;
 
-        p {
+        p,
+        li,
+        span,
+        a,
+        ul,
+        ol {
             line-height: 1.35;
+        }
+
+        p {
             font-size: 1.8em;
             margin: 0 0 0.6em 0;
 
             &:last-child {
                 margin-bottom: 0;
+            }
+        }
+
+        ul {
+            list-style-type: none;
+            li {
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+                padding-left: 5.4em;
+                margin-bottom: 3.4em;
+                a,
+                span {
+                    text-decoration: none;
+                    font-size: 1.8em;
+                    line-height: 1.45;
+                }
+
+                &::before {
+                    display: block;
+                    position: absolute;
+                    content: "";
+                    width: 3.2em;
+                    height: 3.2em;
+                    left: 0;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    background-image: url(/img/icon-list-plus.svg);
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                }
             }
         }
     }
