added rules section

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,6 +3,7 @@ include ../pug-parts/promo-slider.pug
 include ../pug-parts/about.pug
 include ../pug-parts/opisanie.pug
 include ../pug-parts/who-can.pug
+include ../pug-parts/rules.pug
 
 
 include ../pug-parts/footer.pug
