added profit for finalist, for winners and participation

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,6 +4,8 @@ include ../pug-parts/about.pug
 include ../pug-parts/opisanie.pug
 include ../pug-parts/who-can.pug
 include ../pug-parts/rules.pug
+include ../pug-parts/profit-for-finalists.pug
+include ../pug-parts/profit-for-winners.pug
 
 
 include ../pug-parts/footer.pug
