added competitions archive

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,6 +8,7 @@ include ../pug-parts/profit-for-finalists.pug
 include ../pug-parts/profit-for-winners.pug
 include ../pug-parts/front-zhuri-block.pug
 include ../pug-parts/partners-front.pug
+include ../pug-parts/archive-competitions.pug
 
 
 include ../pug-parts/footer.pug
