--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -9,6 +9,7 @@ include ../pug-parts/profit-for-winners.pug
 include ../pug-parts/front-zhuri-block.pug
 include ../pug-parts/partners-front.pug
 include ../pug-parts/archive-competitions.pug
+include ../pug-parts/news-front.pug
 
 
 include ../pug-parts/footer.pug
