added subscribe form, footer

--- a/src/pug-parts/footer.pug
+++ b/src/pug-parts/footer.pug
@@ -1,4 +1,22 @@
 footer
+    .container 
+        .top-row 
+            .socials 
+                .messengers 
+                    a.messenger.messenger--inst(href="#")
+                    a.messenger.messenger--tlgm(href="#")
+                    a.messenger.messenger--wapp(href="#")
+                    a.messenger.messenger--vknt(href="#")
+                .email
+                    a.email-address(href="mailto:event@profashion.ru") event@profashion.ru
+            .logo
+                img.logo-img(src="/img/icon-footer-logo.svg")
+
+        .bottom-row
+            .content-block 
+                p.address 123007 Москва, Ленинградский пр-т, 35, стр. 2, офис 117
+            .content-block 
+                p.copyrights © 2013-2023 PROfashion
 
 script(src="/js/libs.min.js")
 script(src="/js/main.js")
