--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,6 +10,5 @@ include ../pug-parts/front-zhuri-block.pug
 include ../pug-parts/partners-front.pug
 include ../pug-parts/archive-competitions.pug
 include ../pug-parts/news-front.pug
-
-
+include ../pug-parts/subscribe-form.pug
 include ../pug-parts/footer.pug
