rename zhuri to juri in files

--- a/src/pug-parts/footer.pug
+++ b/src/pug-parts/footer.pug
@@ -9,7 +9,7 @@ footer
                     a.messenger.messenger--vknt(href="#")
                 .email
                     a.email-address(href="mailto:event@profashion.ru") event@profashion.ru
-            .logo
+            a.logo(href="/")
                 img.logo-img(src="/img/icon-footer-logo.svg")
 
         .bottom-row
