--- a/src/pug-parts/front-jury-block.pug
+++ b/src/pug-parts/front-jury-block.pug
@@ -1,28 +1,28 @@
-section.front-zhuri-block
+section.front-jury-block
     .container 
         h2.section-title Жюри
 
-        .zhuri
+        .jury
             .member
-                .photo(style="background-image:url(/img/zhuri-01.jpg)")
+                .photo(style="background-image:url(/img/jury-01.jpg)")
                 .info 
                     .name Дмитрий Каманин
                     .preview-text Fashion-фотограф, режиссер, создатель студии кинопортрета «Русский Голливуд»
 
             .member.active
-                .photo(style="background-image:url(/img/zhuri-02.jpg)")
+                .photo(style="background-image:url(/img/jury-02.jpg)")
                 .info
                     .name Дмитрий Каманин
                     .preview-text Fashion-фотограф, режиссер, создатель студии кинопортрета «Русский Голливуд»
             
             .member
-                .photo(style="background-image:url(/img/zhuri-03.jpg)")
+                .photo(style="background-image:url(/img/jury-03.jpg)")
                 .info
                     .name Дмитрий Каманин
                     .preview-text Fashion-фотограф, режиссер, создатель студии кинопортрета «Русский Голливуд»
 
             .member
-                .photo(style="background-image:url(/img/zhuri-04.jpg)")
+                .photo(style="background-image:url(/img/jury-04.jpg)")
                 .info
                     .name Дмитрий Каманин
                     .preview-text Fashion-фотограф, режиссер, создатель студии кинопортрета «Русский Голливуд»
