--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -69,6 +69,7 @@ header {
                     color: #272727;
                     font-weight: 700;
                     text-transform: uppercase;
+                    margin: 0;
                 }
                 .sub-row {
                     font-size: 2.4em;
