--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,9 +10,10 @@
 @import "rules";
 @import "profit-for-finalists";
 @import "profit-for-winners";
-@import "front-zhuri-block";
+@import "front-jury-block";
 @import "partners-front";
 @import "archive-competitions";
 @import "news-front";
 @import "subscribe-form";
 @import "footer";
+@import "jury-list";
