--- a/src/scss/_opisanie.scss
+++ b/src/scss/_opisanie.scss
@@ -50,7 +50,7 @@
                             width: 5.5em;
                             height: 5.5em;
                             margin: 0 1.9em 0 0;
-                            background-image: url(../img/icon-zhuri.svg);
+                            background-image: url(../img/icon-jury.svg);
                         }
                     }
                 }
