added projects-list, card-slider

--- a/src/pug-parts/footer.pug
+++ b/src/pug-parts/footer.pug
@@ -19,4 +19,5 @@ footer
                 p.copyrights © 2013-2023 PROfashion
 
 script(src="/js/libs.min.js")
+script(src="/js/card-slider.js")
 script(src="/js/main.js")
