partners page full

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,3 +21,7 @@
 @import "searchbar";
 @import "projects-list";
 @import "card-slider";
+@import "promo-banner";
+@import "partners-list";
+@import "partnership-form";
+@import "news-list";
