added news-list, news-single

--- a/src/pug-parts/header-jury.pug
+++ b/src/pug-parts/header-jury.pug
@@ -15,7 +15,7 @@ html(lang="en")
                     .main-nav 
                         a.main-nav__link(href="#") Конкурсы
                         a.main-nav__link(href="#") Регистрация
-                        a.main-nav__link(href="#") Жюри
+                        a.main-nav__link.active(href="#") Жюри
                         a.main-nav__link(href="#") Участники
                         a.main-nav__link(href="#") Проекты
                         a.main-nav__link(href="#") Партнеры
