--- a/src/pug-parts/header-participants.pug
+++ b/src/pug-parts/header-participants.pug
@@ -16,7 +16,7 @@ html(lang="en")
                         a.main-nav__link(href="#") Конкурсы
                         a.main-nav__link(href="#") Регистрация
                         a.main-nav__link(href="#") Жюри
-                        a.main-nav__link(href="#") Участники
+                        a.main-nav__link.active(href="#") Участники
                         a.main-nav__link(href="#") Проекты
                         a.main-nav__link(href="#") Партнеры
 
