--- a/src/pug-parts/header-partners.pug
+++ b/src/pug-parts/header-partners.pug
@@ -4,7 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet" href="/css/style.min.css")
-        title Главная страница
+        title Проекты участников
     body 
         header 
             .container 
@@ -18,16 +18,16 @@ html(lang="en")
                         a.main-nav__link(href="#") Жюри
                         a.main-nav__link(href="#") Участники
                         a.main-nav__link(href="#") Проекты
-                        a.main-nav__link(href="#") Партнеры
+                        a.main-nav__link.active(href="#") Партнеры
 
                     .logo.logo--oguz 
                         img.logo__img(src="/img/add_logo.svg")
 
                 .bottom
                     .competition-name
-                        h1.main-row Новости
-                        .sub-row 
+                        h1.main-row Проекты участников
+                        .sub-row Промышленного дизайна одежды
 
                     .add-menu 
-                        a.add-menu__link.active(href="#") Новости
+                        a.add-menu__link(href="#") Новости
                         a.add-menu__link(href="#") Личный кабинет
