--- a/src/pug-parts/header-projects.pug
+++ b/src/pug-parts/header-projects.pug
@@ -17,7 +17,7 @@ html(lang="en")
                         a.main-nav__link(href="#") Регистрация
                         a.main-nav__link(href="#") Жюри
                         a.main-nav__link(href="#") Участники
-                        a.main-nav__link(href="#") Проекты
+                        a.main-nav__link.active(href="#") Проекты
                         a.main-nav__link(href="#") Партнеры
 
                     .logo.logo--oguz 
