--- a/src/pug/single-news.pug
+++ b/src/pug/single-news.pug
@@ -1,5 +1,4 @@
 include ../pug-parts/header-news.pug
-include ../pug-parts/news-top-3.pug
-include ../pug-parts/news-list.pug
+include ../pug-parts/single-news-content.pug
 include ../pug-parts/partners-front.pug
 include ../pug-parts/footer.pug
