--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,4 +24,6 @@
 @import "promo-banner";
 @import "partners-list";
 @import "partnership-form";
+@import "news-top-3";
 @import "news-list";
+@import "single-news-content";
