--- a/src/pug/partners.pug
+++ b/src/pug/partners.pug
@@ -1,4 +1,4 @@
-include ../pug-parts/header.pug
+include ../pug-parts/header-partners.pug
 include ../pug-parts/promo-banner.pug
 include ../pug-parts/partners-list.pug
 include ../pug-parts/partnership-form.pug
