--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,3 +28,8 @@
 @import "news-list";
 @import "single-news-content";
 @import "single-participant-content";
+@import "contests-banner";
+@import "contests-list";
+@import "telegram-news";
+@import "contests-list-actual";
+@import "contests-list-last";
